# bufferlib

./: CMakeLists.txt  README.md  coverage.py  coverage.sh
inc/: bufferlib.h  ringbuf.h
src/: bufferlib.c  pingbuf.c  ringbuf.c
src/inc/: fat_pointer.h  pingbuf.h  ringbuf.h
test/: CMakeLists.txt  leak_check.c  leakcheck.c  read_in_read_out.c  too_many_reads.c
